I fixed the recommendation table view controller to correctly display the right data in the correct section. I made it so that it added the beer correctly. I also made it so that a user can pull down to refresh the table in case they update their own beer cellar so the recommended beers get updated.

--- a/MyBrew/Base.lproj/Main.storyboard
+++ b/MyBrew/Base.lproj/Main.storyboard
@@ -1266,6 +1266,9 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Recomendations" id="Id9-Pp-7Us"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Zar-1a-CUj">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                     <connections>
                         <segue destination="wmb-hJ-Hwy" kind="presentation" identifier="recommendToRateBeer" id="OE4-sh-Tr7"/>
                     </connections>
